syntax = "proto3";
package arike_pb;

enum StatusCode {
    OK = 0;
    LICENSE_EXPIRED = 1;
    LICENSE_LIMITS_EXCEEDED = 2;
    SESSION_EXPIRED = 3;
    INTERNAL_ERROR = 4;
    UNAUTHORIZED = 5;
    UNAUTHENTICATED = 6;
    COLLECTION_NOT_FOUND = 7;
    VARIABLE_NOT_FOUND = 8;
    INVALID_REQUEST = 9;
    TYPE_ERROR = 10;
    UNKNOWN = 11;
}

enum Event {
    ON_SET = 0;
    ON_CHANGE = 1;
    ON_KEEP = 2;
    ON_RISE = 3;
    ON_FALL = 4;
    ON_REACH_VAL = 5;
    ON_EQ_VAL = 6;
    ON_LEAVE_VAL = 7;
    ON_DIFF_VAL = 8;
    ON_CROSS_HIGH_LIMIT = 9;
    ON_CROSS_LOW_LIMIT = 10;
    ON_OVER_HIGH_LIMIT = 11;
    ON_UNDER_LOW_LIMIT = 12;
    ON_REACH_RANGE = 13;
    ON_IN_RANGE = 14;
    ON_LEAVE_RANGE = 15;
    ON_OUT_RANGE = 16;
}

enum ValType {
    TS_INT = 0;
    TS_FLOAT = 1;
    TS_STRING = 2;
    TS_BOOL = 3;
    STK_INT = 4;
    STK_FLOAT = 5;
    STK_STRING = 6;
    STK_BOOL = 7;
}
